Set proper JVM args