@@ -100,6 +100,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest</exclude>
                     </excludes>
